--- a/MSSQLBackupPipe/MSSQLBackupPipe.csproj
+++ b/MSSQLBackupPipe/MSSQLBackupPipe.csproj
@@ -34,8 +34,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigPair.cs" />
+    <Compile Include="DeviceThread.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlThread.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MSSQLBackupPipe.StdPlugins\MSSQLBackupPipe.StdPlugins.csproj">
