--- a/MSSQLBackupPipe.StdPlugins/MSSQLBackupPipe.StdPlugins.csproj
+++ b/MSSQLBackupPipe.StdPlugins/MSSQLBackupPipe.StdPlugins.csproj
@@ -37,17 +37,12 @@
     <Compile Include="BzipTransform.cs" />
     <Compile Include="ConfigUtil.cs" />
     <Compile Include="GzipTransform.cs" />
+    <Compile Include="IBackupTransformer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Zip64Transform.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="ICSharpCode.SharpZipLib.dll" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\VirtualBackupDevice\VirtualBackupDevice.vcproj">
-      <Project>{75864945-89FD-43ED-B0E0-18813A5BD2DD}</Project>
-      <Name>VirtualBackupDevice</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
