change output name

--- a/MSSQLBackupPipe/MSSQLBackupPipe.csproj
+++ b/MSSQLBackupPipe/MSSQLBackupPipe.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MSSQLBackupPipe</RootNamespace>
-    <AssemblyName>MSSQLBackupPipe</AssemblyName>
+    <AssemblyName>msbp</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
