--- a/MSSQLBackupPipe.StdPlugins/MSSQLBackupPipe.StdPlugins.csproj
+++ b/MSSQLBackupPipe.StdPlugins/MSSQLBackupPipe.StdPlugins.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transform\BzipTransform.cs" />
     <Compile Include="Transform\GzipTransform.cs" />
+    <Compile Include="Transform\RateTransform.cs" />
     <Compile Include="Transform\Zip64Transform.cs" />
   </ItemGroup>
   <ItemGroup>
