--- a/VirtualBackupDevice/VirtualBackupDevice.vcproj
+++ b/VirtualBackupDevice/VirtualBackupDevice.vcproj
@@ -66,6 +66,7 @@
 				GenerateDebugInformation="true"
 				AssemblyDebug="1"
 				TargetMachine="1"
+				KeyFile="$(ProjectDir)MSSQLCompressedBackup.snk"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -141,6 +142,7 @@
 				GenerateDebugInformation="true"
 				AssemblyDebug="1"
 				TargetMachine="17"
+				KeyFile="$(ProjectDir)MSSQLCompressedBackup.snk"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -214,6 +216,7 @@
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				TargetMachine="1"
+				KeyFile="$(ProjectDir)MSSQLCompressedBackup.snk"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -288,6 +291,7 @@
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				TargetMachine="17"
+				KeyFile="$(ProjectDir)MSSQLCompressedBackup.snk"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -440,6 +444,10 @@
 				>
 			</File>
 		</Filter>
+		<File
+			RelativePath=".\MSSQLCompressedBackup.snk"
+			>
+		</File>
 		<File
 			RelativePath=".\ReadMe.txt"
 			>
