--- a/VirtualBackupDevice/VirtualBackupDevice.vcproj
+++ b/VirtualBackupDevice/VirtualBackupDevice.vcproj
@@ -61,8 +61,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(NOINHERIT)"
+				AdditionalDependencies="$(NOINHERIT) ptrustm.lib"
 				LinkIncremental="2"
+				IgnoreDefaultLibraryNames="msvcmrt.lib"
 				GenerateDebugInformation="true"
 				AssemblyDebug="1"
 				TargetMachine="1"
@@ -137,8 +138,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(NOINHERIT)"
+				AdditionalDependencies="$(NOINHERIT) ptrustm.lib"
 				LinkIncremental="2"
+				IgnoreDefaultLibraryNames="msvcmrt.lib"
 				GenerateDebugInformation="true"
 				AssemblyDebug="1"
 				TargetMachine="17"
@@ -212,8 +214,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(NoInherit)"
+				AdditionalDependencies="$(NoInherit) ptrustm.lib"
 				LinkIncremental="1"
+				IgnoreDefaultLibraryNames="msvcmrt.lib"
 				GenerateDebugInformation="true"
 				TargetMachine="1"
 				KeyFile="$(ProjectDir)MSSQLCompressedBackup.snk"
@@ -287,8 +290,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(NoInherit)"
+				AdditionalDependencies="$(NoInherit) ptrustm.lib"
 				LinkIncremental="1"
+				IgnoreDefaultLibraryNames="msvcmrt.lib"
 				GenerateDebugInformation="true"
 				TargetMachine="17"
 				KeyFile="$(ProjectDir)MSSQLCompressedBackup.snk"
