--- a/VirtualBackupDevice/VirtualBackupDevice.vcproj
+++ b/VirtualBackupDevice/VirtualBackupDevice.vcproj
@@ -61,7 +61,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(NOINHERIT) ptrustm.lib"
+				AdditionalDependencies="ptrustmd.lib $(NOINHERIT)"
 				LinkIncremental="2"
 				IgnoreDefaultLibraryNames="msvcmrt.lib"
 				GenerateDebugInformation="true"
@@ -138,7 +138,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(NOINHERIT) ptrustm.lib"
+				AdditionalDependencies="ptrustmd.lib $(NOINHERIT)"
 				LinkIncremental="2"
 				IgnoreDefaultLibraryNames="msvcmrt.lib"
 				GenerateDebugInformation="true"
@@ -214,7 +214,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(NoInherit) ptrustm.lib"
+				AdditionalDependencies="ptrustm.lib $(NOINHERIT)"
 				LinkIncremental="1"
 				IgnoreDefaultLibraryNames="msvcmrt.lib"
 				GenerateDebugInformation="true"
@@ -290,7 +290,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(NoInherit) ptrustm.lib"
+				AdditionalDependencies="ptrustm.lib $(NOINHERIT)"
 				LinkIncremental="1"
 				IgnoreDefaultLibraryNames="msvcmrt.lib"
 				GenerateDebugInformation="true"
