--- a/MSSQLBackupPipe.StdPlugins/MSSQLBackupPipe.StdPlugins.csproj
+++ b/MSSQLBackupPipe.StdPlugins/MSSQLBackupPipe.StdPlugins.csproj
@@ -41,13 +41,13 @@
   <ItemGroup>
     <Compile Include="ConfigUtil.cs" />
     <Compile Include="Database\DatabaseSource.cs" />
-    <Compile Include="Destination\LocalDestination.cs" />
     <Compile Include="IBackupDatabase.cs" />
-    <Compile Include="IBackupDestination.cs" />
     <Compile Include="IBackupPlugin.cs" />
+    <Compile Include="IBackupStorage.cs" />
     <Compile Include="IBackupTransformer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Transform\BzipTransform.cs" />
+    <Compile Include="Storage\LocalDestination.cs" />
+    <Compile Include="Transform\Bzip2Transform.cs" />
     <Compile Include="Transform\GzipTransform.cs" />
     <Compile Include="Transform\RateTransform.cs" />
     <Compile Include="Transform\Zip64Transform.cs" />
