--- a/MSSQLBackupPipe/MSSQLBackupPipe.csproj
+++ b/MSSQLBackupPipe/MSSQLBackupPipe.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="ConfigPair.cs" />
     <Compile Include="DeviceThread.cs" />
+    <Compile Include="DisposableList.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlThread.cs" />
