--- a/.hgignore
+++ b/.hgignore
@@ -4,6 +4,7 @@ release/*
 out/*
 obj/*
 debug/*
+Debug/*
 VirtualBackupDevice\x64\Release/*
 VirtualBackupDevice\x64\Debug/*
 VirtualBackupDevice\Release/*
@@ -18,3 +19,5 @@ MSSQLBackupPipe.ncb
 MSSQLBackupPipe.StdPlugins\obj/*
 MSSQLBackupPipe.StdPlugins\bin\Release/*
 MSSQLBackupPipe.StdPlugins\bin\Debug/*
+glob:MSSQLBackupPipe.suo
+glob:VirtualBackupDevice/*.user
