Start to refactor to allow for a GUI

--- a/.hgignore
+++ b/.hgignore
@@ -1,4 +1,9 @@
 syntax: glob
+VirtualBackupDevice/*.user
+MSSQLBackupPipe/*.user
+MSSQLBackupPipe.suo
+MSSQLBackupPipe.Common\bin\Debug/*
+MSSQLBackupPipe.Common/*.user
 x64\release/*
 release/*
 out/*
