--- a/VirtualBackupDevice/VirtualBackupDevice.vcproj
+++ b/VirtualBackupDevice/VirtualBackupDevice.vcproj
@@ -45,12 +45,14 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				PreprocessorDefinitions="WIN32;_DEBUG"
+				PreprocessorDefinitions="WIN32;_DEBUG;CODE_ANALYSIS"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="2"
 				GenerateXMLDocumentationFiles="true"
 				WarningLevel="3"
 				DebugInformationFormat="3"
+				ForcedIncludeFiles="CodeAnalysis\SourceAnnotations.h"
+				EnablePREfast="true"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -88,6 +90,8 @@
 			/>
 			<Tool
 				Name="VCFxCopTool"
+				Rules="-Microsoft.Globalization#CA1301;-Microsoft.Globalization#CA1302;-Microsoft.Globalization#CA1308;-Microsoft.Globalization#CA1306;-Microsoft.Globalization#CA1304;-Microsoft.Globalization#CA1305;-Microsoft.Globalization#CA2101;-Microsoft.Globalization#CA1300;-Microsoft.Globalization#CA1307;-Microsoft.Globalization#CA1309"
+				EnableFxCop="true"
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
@@ -123,11 +127,13 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				PreprocessorDefinitions="WIN32;_DEBUG"
+				PreprocessorDefinitions="WIN32;_DEBUG;CODE_ANALYSIS"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="2"
 				WarningLevel="3"
 				DebugInformationFormat="3"
+				ForcedIncludeFiles="CodeAnalysis\SourceAnnotations.h"
+				EnablePREfast="true"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -164,6 +170,7 @@
 			/>
 			<Tool
 				Name="VCFxCopTool"
+				EnableFxCop="true"
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
@@ -203,6 +210,7 @@
 				UsePrecompiledHeader="2"
 				WarningLevel="3"
 				DebugInformationFormat="3"
+				ForcedIncludeFiles="CodeAnalysis\SourceAnnotations.h"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -278,6 +286,7 @@
 				UsePrecompiledHeader="2"
 				WarningLevel="3"
 				DebugInformationFormat="3"
+				ForcedIncludeFiles="CodeAnalysis\SourceAnnotations.h"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
