--- a/MSSQLBackupPipe.Common/MSSQLBackupPipe.Common.csproj
+++ b/MSSQLBackupPipe.Common/MSSQLBackupPipe.Common.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.50727</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{486443C8-A843-409A-8A23-EAC5325A5171}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -56,7 +56,7 @@
       <Project>{FD720360-0D0F-410B-990E-36DE4BEB9F23}</Project>
       <Name>MSSQLBackupPipe.StdPlugins</Name>
     </ProjectReference>
-    <ProjectReference Include="..\VirtualBackupDevice\VirtualBackupDevice.vcproj">
+    <ProjectReference Include="..\MSBackupPipe.VirtualBackupDevice\MSBackupPipe.VirtualBackupDevice.vcproj">
       <Project>{75864945-89FD-43ED-B0E0-18813A5BD2DD}</Project>
       <Name>VirtualBackupDevice</Name>
     </ProjectReference>
