Rename Common namespace Enable Code Analysis on Common Fix many of the code analysis issues.

--- a/MSSQLBackupPipe/MSSQLBackupPipe.csproj
+++ b/MSSQLBackupPipe/MSSQLBackupPipe.csproj
@@ -46,7 +46,7 @@
     <Compile Include="Util.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MSSQLBackupPipe.Common\MSSQLBackupPipe.Common.csproj">
+    <ProjectReference Include="..\MSBackupPipe.Common\MSBackupPipe.Common.csproj">
       <Project>{486443C8-A843-409A-8A23-EAC5325A5171}</Project>
       <Name>MSSQLBackupPipe.Common</Name>
     </ProjectReference>
