--- a/MSBackupPipe.Common/MSBackupPipe.Common.csproj
+++ b/MSBackupPipe.Common/MSBackupPipe.Common.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{486443C8-A843-409A-8A23-EAC5325A5171}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MSSQLBackupPipe.Common</RootNamespace>
-    <AssemblyName>MSSQLBackupPipe.Common</AssemblyName>
+    <RootNamespace>MSBackupPipe.Common</RootNamespace>
+    <AssemblyName>MSBackupPipe.Common</AssemblyName>
     <StartupObject>
     </StartupObject>
     <SignAssembly>true</SignAssembly>
@@ -27,6 +27,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <RunCodeAnalysis>true</RunCodeAnalysis>
+    <CodeAnalysisRules>-Microsoft.Globalization#CA1301;-Microsoft.Globalization#CA1302;-Microsoft.Globalization#CA1308;-Microsoft.Globalization#CA1306;-Microsoft.Globalization#CA1304;-Microsoft.Globalization#CA1305;-Microsoft.Globalization#CA2101;-Microsoft.Globalization#CA1300;-Microsoft.Globalization#CA1307;-Microsoft.Globalization#CA1309</CodeAnalysisRules>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -46,7 +48,8 @@
     <Compile Include="ConfigPair.cs" />
     <Compile Include="DeviceThread.cs" />
     <Compile Include="DisposableList.cs" />
-    <Compile Include="ExecutionExceptions.cs" />
+    <Compile Include="ParallelExecutionException.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IUpdateNotification.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlThread.cs" />
