refractoring to move command line code to the Cmd project.

--- a/.hgignore
+++ b/.hgignore
@@ -29,3 +29,4 @@ MSSQLBackupPipe.StdPlugins\bin\Debug/*
 glob:MSSQLBackupPipe.suo
 glob:VirtualBackupDevice/*.user
 glob:Release/*
+glob:MSBackupPipe.Cmd/*.user
