--- a/MSBackupPipe.Cmd/MSBackupPipe.Cmd.csproj
+++ b/MSBackupPipe.Cmd/MSBackupPipe.Cmd.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandLineNotifier.cs" />
+    <Compile Include="ConfigUtil.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
