--- a/MSBackupPipe.StdPlugins/MSBackupPipe.StdPlugins.csproj
+++ b/MSBackupPipe.StdPlugins/MSBackupPipe.StdPlugins.csproj
@@ -46,13 +46,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConfigUtil.cs" />
     <Compile Include="Database\DatabaseSource.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IBackupDatabase.cs" />
     <Compile Include="IBackupPlugin.cs" />
     <Compile Include="IBackupStorage.cs" />
     <Compile Include="IBackupTransformer.cs" />
+    <Compile Include="ParameterInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage\LocalStorage.cs" />
     <Compile Include="Transform\Bzip2Transform.cs" />
