--- a/MSBackupPipe.StdPlugins/MSBackupPipe.StdPlugins.csproj
+++ b/MSBackupPipe.StdPlugins/MSBackupPipe.StdPlugins.csproj
@@ -52,9 +52,11 @@
     <Compile Include="IBackupPlugin.cs" />
     <Compile Include="IBackupStorage.cs" />
     <Compile Include="IBackupTransformer.cs" />
+    <Compile Include="IStreamNotification.cs" />
     <Compile Include="ParameterInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage\LocalStorage.cs" />
+    <Compile Include="TrackingStream.cs" />
     <Compile Include="Transform\Bzip2Transform.cs" />
     <Compile Include="Transform\GzipTransform.cs" />
     <Compile Include="Transform\RateTransform.cs" />
