Switch back to Visual Studio 2005. :( I couldn't build x64 C++ code that targeted .Net 2.0.

--- a/MSBackupPipe.VirtualBackupDevice/MSBackupPipe.VirtualBackupDevice.vcproj
+++ b/MSBackupPipe.VirtualBackupDevice/MSBackupPipe.VirtualBackupDevice.vcproj
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="8.00"
 	Name="MSBackupPipe.VirtualBackupDevice"
 	ProjectGUID="{75864945-89FD-43ED-B0E0-18813A5BD2DD}"
 	RootNamespace="MSBackupPipe.VirtualBackupDevice"
 	Keyword="ManagedCProj"
-	TargetFrameworkVersion="131072"
+	
 	>
 	<Platforms>
 		<Platform
@@ -71,8 +71,8 @@
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="true"
 				AssemblyDebug="1"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
+				
+				
 				TargetMachine="1"
 				KeyFile="$(ProjectDir)MSSQLCompressedBackup.snk"
 			/>
@@ -95,6 +95,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -151,8 +154,8 @@
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="true"
 				AssemblyDebug="1"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
+				
+				
 				TargetMachine="17"
 				KeyFile="$(ProjectDir)MSSQLCompressedBackup.snk"
 			/>
@@ -174,6 +177,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -227,8 +233,8 @@
 				LinkIncremental="1"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="true"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
+			
+			
 				TargetMachine="1"
 				KeyFile="$(ProjectDir)MSSQLCompressedBackup.snk"
 			/>
@@ -249,6 +255,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -303,8 +312,8 @@
 				LinkIncremental="1"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="true"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
+				
+				
 				TargetMachine="17"
 				KeyFile="$(ProjectDir)MSSQLCompressedBackup.snk"
 			/>
@@ -327,6 +336,9 @@
 				Name="VCAppVerifierTool"
 			/>
 			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
@@ -335,17 +347,17 @@
 		<AssemblyReference
 			RelativePath="System.dll"
 			AssemblyName="System, Version=2.0.0.0, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL"
-			MinFrameworkVersion="131072"
+			
 		/>
 		<AssemblyReference
 			RelativePath="System.Data.dll"
 			AssemblyName="System.Data, Version=2.0.0.0, PublicKeyToken=b77a5c561934e089, processorArchitecture=x86"
-			MinFrameworkVersion="131072"
+			
 		/>
 		<AssemblyReference
 			RelativePath="System.XML.dll"
 			AssemblyName="System.Xml, Version=2.0.0.0, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL"
-			MinFrameworkVersion="131072"
+		
 		/>
 	</References>
 	<Files>
